--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNO7xImNCddHp5DxyrgqWdd",
+      "authorship_tag": "ABX9TyNt770tHbbORrIMhuYR+1+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -553,6 +553,23 @@
         "ORDER BY num_times DESC\n",
         "LIMIT 1;\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u9aeiOXxCEr6"
+      },
+      "source": [
+        "SELECT w.channel, a.name, a.id, COUNT (*) AS num_channel\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id\n",
+        "GROUP BY a.id, a.name, w.channel\n",
+        "ORDER BY num_channel DESC\n",
+        "LIMIT 10;\n"
       ],
       "execution_count": null,
       "outputs": []
