--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNt770tHbbORrIMhuYR+1+k",
+      "authorship_tag": "ABX9TyOACzF+p5C543WqqgZKmvFX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -523,7 +523,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FF-9eijEBhgp"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "id": "FF-9eijEBhgp",
+        "outputId": "1a034d18-529d-4752-a4da-0e3bcc739b06"
       },
       "source": [
         "SELECT a.name, a.id, w.channel, COUNT(w.channel) AS num_times\n",
@@ -535,8 +540,17 @@
         "ORDER BY num_times;\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-00f8a76393be>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT a.name, a.id, w.channel, COUNT(w.channel) AS num_times\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -570,6 +584,20 @@
         "GROUP BY a.id, a.name, w.channel\n",
         "ORDER BY num_channel DESC\n",
         "LIMIT 10;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i4lF2hsXB5Hk"
+      },
+      "source": [
+        "SELECT DATE_PART('year', o.occurred_at) AS year, SUM(o.total_amt_usd) AS total_sales\n",
+        "FROM orders o\n",
+        "GROUP BY DATE_PART('year', o.occurred_at)\n",
+        "ORDER BY SUM(o.total_amt_usd) DESC;"
       ],
       "execution_count": null,
       "outputs": []
