--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOACzF+p5C543WqqgZKmvFX",
+      "authorship_tag": "ABX9TyMzH40zII+puh00mCPF41B4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -598,6 +598,37 @@
         "FROM orders o\n",
         "GROUP BY DATE_PART('year', o.occurred_at)\n",
         "ORDER BY SUM(o.total_amt_usd) DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A3bh-qffCLes"
+      },
+      "source": [
+        "SELECT DATE_PART('month',occurred_at) AS max_month, SUM(o.total_amt_usd) AS total\n",
+        "FROM orders o\n",
+        "WHERE occurred_at BETWEEN '2014-01-01' AND '2017-01-01'\n",
+        "GROUP BY DATE_PART('month',occurred_at)\n",
+        "ORDER BY total DESC\n",
+        "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Aky5dAuHCXL3"
+      },
+      "source": [
+        "SELECT DATE_PART('year',occurred_at) AS max_month, COUNT(*) AS total_sales\n",
+        "FROM orders o\n",
+        "GROUP BY DATE_PART('year',occurred_at)\n",
+        "ORDER BY total_sales DESC\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
