--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzH40zII+puh00mCPF41B4",
+      "authorship_tag": "ABX9TyMw1N5jNLT2aIXQ+saOlF/o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -627,6 +627,21 @@
         "SELECT DATE_PART('year',occurred_at) AS max_month, COUNT(*) AS total_sales\n",
         "FROM orders o\n",
         "GROUP BY DATE_PART('year',occurred_at)\n",
+        "ORDER BY total_sales DESC\n",
+        "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nIbuUWIgCiWC"
+      },
+      "source": [
+        "SELECT DATE_PART('month',occurred_at) AS max_month, COUNT(*) AS total_sales\n",
+        "FROM orders o\n",
+        "GROUP BY DATE_PART('month',occurred_at)\n",
         "ORDER BY total_sales DESC\n",
         "LIMIT 1;"
       ],
