--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMw1N5jNLT2aIXQ+saOlF/o",
+      "authorship_tag": "ABX9TyPpBOI5rBBugRUg5JVJLzqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -644,6 +644,24 @@
         "GROUP BY DATE_PART('month',occurred_at)\n",
         "ORDER BY total_sales DESC\n",
         "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YGrgUxwIRFrX"
+      },
+      "source": [
+        "SELECT DATE_TRUNC('month', occurred_at) AS month, SUM(o.gloss_amt_usd) AS gloss_total\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id = o.account_id\n",
+        "WHERE a.name LIKE '%Walmart%'\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC\n",
+        "LIMIT 1;\n"
       ],
       "execution_count": null,
       "outputs": []
