--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpBOI5rBBugRUg5JVJLzqF",
+      "authorship_tag": "ABX9TyN3J4XPxYJBkHbNf6rcCcpv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,6 +662,18 @@
         "GROUP BY 1\n",
         "ORDER BY 2 DESC\n",
         "LIMIT 1;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KE4u-kmaRTe5"
+      },
+      "source": [
+        "SELECT account_id, total_amt_usd, CASE WHEN total_amt_usd>=3000 THEN 'Large' ELSE 'Small' END AS level_of_order\n",
+        "FROM orders;"
       ],
       "execution_count": null,
       "outputs": []
