--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3J4XPxYJBkHbNf6rcCcpv",
+      "authorship_tag": "ABX9TyPiKnFHOcPjxjBgPGF6MQR0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -674,6 +674,35 @@
       "source": [
         "SELECT account_id, total_amt_usd, CASE WHEN total_amt_usd>=3000 THEN 'Large' ELSE 'Small' END AS level_of_order\n",
         "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DIWR1F7fpPI7"
+      },
+      "source": [
+        "SELECT CASE WHEN total>=2000 THEN 'At least 2000' WHEN total>=1000 AND total<2000 THEN 'Between 1000 and 2000' ELSE 'Less than 1000' END AS catogery, COUNT(*) AS num\n",
+        "FROM orders\n",
+        "GROUP BY 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IHIbbe2Qpeqj"
+      },
+      "source": [
+        "SELECT a.name, SUM(o.total_amt_usd) As total, CASE WHEN SUM(o.total_amt_usd)>=200000 THEN 'Lifetime value' WHEN SUM(o.total_amt_usd)>=100000 AND SUM(o.total_amt_usd)<200000 THEN 'medium' ELSE 'lowest' END AS level\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "On o.account_id = a.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC;\n"
       ],
       "execution_count": null,
       "outputs": []
