--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiKnFHOcPjxjBgPGF6MQR0",
+      "authorship_tag": "ABX9TyNKbd3r+pt60ibesK7//2jj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,7 +540,7 @@
         "ORDER BY num_times;\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -701,6 +701,23 @@
         "FROM orders o\n",
         "JOIN accounts a\n",
         "On o.account_id = a.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ONw66FAcpsn_"
+      },
+      "source": [
+        "SELECT a.name, SUM(o.total_amt_usd) As total, CASE WHEN SUM(o.total_amt_usd)>=200000 THEN 'Lifetime value' WHEN SUM(o.total_amt_usd)>=100000 AND SUM(o.total_amt_usd)<200000 THEN 'medium' ELSE 'lowest' END AS level\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "On o.account_id = a.id\n",
+        "WHERE occurred_at>'2015-12-31'\n",
         "GROUP BY 1\n",
         "ORDER BY 2 DESC;\n"
       ],
