--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKbd3r+pt60ibesK7//2jj",
+      "authorship_tag": "ABX9TyPmHNarnHc65VfCSskvW0g+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -720,6 +720,42 @@
         "WHERE occurred_at>'2015-12-31'\n",
         "GROUP BY 1\n",
         "ORDER BY 2 DESC;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aqIOdzcSonrH"
+      },
+      "source": [
+        "SELECT s.name, COUNT(*) AS total_orders, CASE WHEN COUNT(*)>=200 THEN 'top' ELSE 'not' END AS catogery\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id = o.account_id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z7_LpRCSozMk"
+      },
+      "source": [
+        "SELECT s.name, COUNT(*) AS total_orders, SUM(o.total_amt_usd) AS total_sales, CASE WHEN COUNT(*)>=200 OR SUM(o.total_amt_usd)>750000 THEN 'top' WHEN COUNT(*)>150 OR SUM(o.total_amt_usd)>500000 THEN 'middle' ELSE 'low' END AS catogery\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id = o.account_id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 3 DESC;\n"
       ],
       "execution_count": null,
       "outputs": []
