--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz_4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNEABdmQZ90NRI/Iq2j1ZkS",
+      "authorship_tag": "ABX9TyPo2L5LwzWYf2rRcQbafFgW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,42 @@
         "WHERE DATE_TRUNC('month', occurred_at)=\n",
         "(SELECT DATE_TRUNC('month', MIN(occurred_at)) AS      min_month\n",
         "FROM orders);"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KOChKi0pV1NW"
+      },
+      "source": [
+        "SELECT t3.name, t2.region, t2.total_amt\n",
+        "FROM\n",
+        "  (SELECT region, MAX(total) AS total_amt\n",
+        "  FROM \n",
+        "     (SELECT r.name AS region, s.name AS name,           SUM(o.total_amt_usd) AS total\n",
+        "      FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1,2) t1\n",
+        "   GROUP BY 1)t2\n",
+        "JOIN\n",
+        "(SELECT r.name AS region, s.name AS name, SUM(o.total_amt_usd) AS total\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "JOIN region r\n",
+        "On r.id=s.region_id\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC) t3\n",
+        "ON t2.region=t3.region AND t2.total_amt=t3.total;"
       ],
       "execution_count": null,
       "outputs": []
