--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Quiz_4.ipynb",
+      "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPo2L5LwzWYf2rRcQbafFgW",
+      "authorship_tag": "ABX9TyOKe8ehjPbXIoHIhGAxV8lQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,37 @@
         "GROUP BY 1,2\n",
         "ORDER BY 3 DESC) t3\n",
         "ON t2.region=t3.region AND t2.total_amt=t3.total;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NbVOsj0DWEhH"
+      },
+      "source": [
+        "SELECT r.name, COUNT(o.total) as total_count\n",
+        "FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1\n",
+        "HAVING SUM(o.total_amt_usd)=      \n",
+        "(SELECT MAX(total)\n",
+        " FROM\n",
+        "   (SELECT r.name AS region,               SUM(o.total_amt_usd) AS total\n",
+        "      FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1)sub);\n"
       ],
       "execution_count": null,
       "outputs": []
