--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKe8ehjPbXIoHIhGAxV8lQ",
+      "authorship_tag": "ABX9TyNgMKHDsO8MY2W33AhPmsbQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,6 +102,32 @@
         "      JOIN region r\n",
         "      On r.id=s.region_id\n",
         "      GROUP BY 1)sub);\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9ZTXWIUhWYzo"
+      },
+      "source": [
+        "SELECT COUNT(*)\n",
+        "FROM\n",
+        "(SELECT a.name\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id= o.account_id\n",
+        "GROUP BY 1\n",
+        "HAVING SUM(o.total)> (SELECT total_amt\n",
+        "    FROM                  \n",
+        "   (SELECT a.name, SUM(o.standard_qty) total_orders, SUM(o.total) AS total_amt\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id=o.account_id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC    \n",
+        "LIMIT 1)sub))sub_two;"
       ],
       "execution_count": null,
       "outputs": []
