--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgMKHDsO8MY2W33AhPmsbQ",
+      "authorship_tag": "ABX9TyN4aHRQuNkrZxvzwHHb0u+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,6 +128,31 @@
         "GROUP BY 1\n",
         "ORDER BY 2 DESC    \n",
         "LIMIT 1)sub))sub_two;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H6smEHhrnY52"
+      },
+      "source": [
+        "SELECT w.channel, a.name, COUNT(*)\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id AND a.id= \n",
+        "(SELECT id \n",
+        "FROM       \n",
+        "(SELECT a.id as id, a.name as act_name, SUM(o.total_amt_usd) as total_spent\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id = o.account_id                      \n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC\n",
+        "LIMIT 1) query_one)\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC;"
       ],
       "execution_count": null,
       "outputs": []
