--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN4aHRQuNkrZxvzwHHb0u+k",
+      "authorship_tag": "ABX9TyOx8/jgvfJOvSxriaL7UWqH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,6 +153,41 @@
         "LIMIT 1) query_one)\n",
         "GROUP BY 1,2\n",
         "ORDER BY 3 DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1hdD9YH4nqBW"
+      },
+      "source": [
+        "SELECT AVG(total_spent)                      \n",
+        "FROM (SELECT a.name, SUM(o.total_amt_usd) AS total_spent\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC\n",
+        "LIMIT 10)sub_query ;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xFyaifqhn052"
+      },
+      "source": [
+        "SELECT AVG(avg)\n",
+        "FROM                      \n",
+        "(SELECT o.account_id, AVG(o.total_amt_usd) as avg\n",
+        "FROM orders o\n",
+        "GROUP BY 1\n",
+        "HAVING AVG(total_amt_usd)> SELECT AVG(o.total_amt_usd) as tot_avg\n",
+        "FROM orders o))sub_query;"
       ],
       "execution_count": null,
       "outputs": []
