--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOx8/jgvfJOvSxriaL7UWqH",
+      "authorship_tag": "ABX9TyOfQtxKjEBco/y8mx+7rW8g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,6 +188,68 @@
         "GROUP BY 1\n",
         "HAVING AVG(total_amt_usd)> SELECT AVG(o.total_amt_usd) as tot_avg\n",
         "FROM orders o))sub_query;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Efc8cmHaOR1R"
+      },
+      "source": [
+        "WITH t1 AS (SELECT r.name AS region, s.name AS    name, SUM(o.total_amt_usd) AS total\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "JOIN region r\n",
+        "On r.id=s.region_id\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC),\n",
+        "\n",
+        "t2 AS (SELECT region, MAX(total) AS total_amt\n",
+        "       FROM t1\n",
+        "       GROUP BY 1)\n",
+        "       \n",
+        "SELECT t1.name, t2.region, t2.total_amt\n",
+        "FROM t1\n",
+        "JOIN t2\n",
+        "ON t2.region=t1.region AND t2.total_amt=t1.total;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pWn0NRGZOe9d"
+      },
+      "source": [
+        "WITH t1 AS (SELECT r.name AS region,                     SUM(o.total_amt_usd) AS total\n",
+        "      FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1),\n",
+        "      \n",
+        "t2 AS (SELECT MAX(total)\n",
+        "       FROM t1)\n",
+        "       \n",
+        " SELECT r.name, COUNT(o.total) as total_count\n",
+        "FROM orders o\n",
+        "      JOIN accounts a\n",
+        "      ON o.account_id = a.id\n",
+        "      JOIN sales_reps s\n",
+        "      ON a.sales_rep_id = s.id\n",
+        "      JOIN region r\n",
+        "      On r.id=s.region_id\n",
+        "      GROUP BY 1\n",
+        "HAVING SUM(o.total_amt_usd) = (SELECT * FROM t2); \n"
       ],
       "execution_count": null,
       "outputs": []
