--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOfQtxKjEBco/y8mx+7rW8g",
+      "authorship_tag": "ABX9TyMOHkHiS5se+xK0vFEm5M6+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,6 +250,34 @@
         "      On r.id=s.region_id\n",
         "      GROUP BY 1\n",
         "HAVING SUM(o.total_amt_usd) = (SELECT * FROM t2); \n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yN8lZhrKOsGp"
+      },
+      "source": [
+        "WITH t1 AS (SELECT a.name, SUM(o.standard_qty) total_orders, SUM(o.total) AS total_amt\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id=o.account_id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC    \n",
+        "LIMIT 1),\n",
+        "\n",
+        "t3 AS (SELECT a.name\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id= o.account_id\n",
+        "GROUP BY 1\n",
+        "HAVING SUM(o.total)>(SELECT total_amt FROM t1))\n",
+        "\n",
+        "SELECT COUNT(*)\n",
+        "FROM t3;\n",
+        "                     "
       ],
       "execution_count": null,
       "outputs": []
