--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOHkHiS5se+xK0vFEm5M6+",
+      "authorship_tag": "ABX9TyMn0jTYnRjEEy9CEX9gNQcB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,6 +277,31 @@
         "\n",
         "SELECT COUNT(*)\n",
         "FROM t3;\n",
+        "                     "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z-sfjktKS_zj"
+      },
+      "source": [
+        "WITH t1 AS (SELECT a.id as id, a.name as act_name, SUM(o.total_amt_usd) as total_spent\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON a.id = o.account_id                      \n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC\n",
+        "LIMIT 1)\n",
+        "                     \n",
+        " SELECT w.channel, a.name, COUNT(*)\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id AND a.id=(SELECT id FROM t1)\n",
+        "GROUP BY 1,2\n",
+        "ORDER BY 3 DESC;                      \n",
         "                     "
       ],
       "execution_count": null,
