--- a/Quiz4_SQL.ipynb
+++ b/Quiz4_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz4_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMn0jTYnRjEEy9CEX9gNQcB",
+      "authorship_tag": "ABX9TyN2kAK4fSdg2YpPfdBkq4vf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -302,6 +302,47 @@
         "ON a.id = w.account_id AND a.id=(SELECT id FROM t1)\n",
         "GROUP BY 1,2\n",
         "ORDER BY 3 DESC;                      \n",
+        "                     "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LG6tht9ATPDQ"
+      },
+      "source": [
+        "WITH t1 AS (SELECT a.name, SUM(o.total_amt_usd) AS total_spent\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY 1\n",
+        "ORDER BY 2 DESC\n",
+        "LIMIT 10)                     \n",
+        "                     \n",
+        "SELECT AVG(total_spent) FROM t1;\n",
+        "                    "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GGkyz41zTaHV"
+      },
+      "source": [
+        "WITH t1 AS (SELECT AVG(o.total_amt_usd) as tot_avg\n",
+        "FROM orders o),\n",
+        "                     \n",
+        "t2 AS (SELECT o.account_id, AVG(o.total_amt_usd) as avg\n",
+        "FROM orders o\n",
+        "GROUP BY 1\n",
+        "HAVING AVG(total_amt_usd)> (SELECT tot_avg FROM t1))\n",
+        "       \n",
+        "SELECT AVG(avg)\n",
+        "FROM t2;       \n",
         "                     "
       ],
       "execution_count": null,
