SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNa1RcUrUCJab/veYK5HWGU",
+      "authorship_tag": "ABX9TyMHNAQ6hNxPAW9zxLcSytj9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,20 @@
         "FROM accounts\n",
         "GROUP BY 1\n",
         "ORDER BY 2;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o_7eMopLUJaX"
+      },
+      "source": [
+        "SELECT LEFT(UPPER(name), 1) AS letter, COUNT(*) AS num_companies\n",
+        "FROM accounts\n",
+        "GROUP BY 1\n",
+        "Order BY 2;"
       ],
       "execution_count": null,
       "outputs": []
