SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHNAQ6hNxPAW9zxLcSytj9",
+      "authorship_tag": "ABX9TyOZUpbZN//X+SRIiSGI3qUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,34 @@
         "FROM accounts\n",
         "GROUP BY 1\n",
         "Order BY 2;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dAcU5tOlD6cJ"
+      },
+      "source": [
+        "SELECT SUM(num) nums, SUM(letter) letters\n",
+        "FROM \n",
+        "(SELECT name, CASE WHEN LEFT(UPPER(name),1) IN ('0','1','2','3','4','5','6','7','8','9') THEN 1 ELSE 0 END AS num,\n",
+        "CASE WHEN LEFT(UPPER(name),1) NOT IN ('0','1','2','3','4','5','6','7','8','9') THEN 1 ELSE 0 END AS letter\n",
+        "FROM accounts)query;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fL1diQ8lEHmC"
+      },
+      "source": [
+        "SELECT SUM(vowel) vowel, SUM(non_vowel) non_vowel\n",
+        "FROM (SELECT name, CASE WHEN LEFT(UPPER(name),1) IN ('A','E','I','O','U') THEN 1 ELSE 0 END AS vowel, CASE WHEN LEFT(UPPER(name),1) NOT IN ('A','E','I','O','U') THEN 1 ELSE 0 END AS non_vowel\n",
+        "FROM accounts)query;\n"
       ],
       "execution_count": null,
       "outputs": []
