SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZUpbZN//X+SRIiSGI3qUz",
+      "authorship_tag": "ABX9TyOJ9Bz+mekjeTU7NlB+lz4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,19 @@
         "SELECT SUM(vowel) vowel, SUM(non_vowel) non_vowel\n",
         "FROM (SELECT name, CASE WHEN LEFT(UPPER(name),1) IN ('A','E','I','O','U') THEN 1 ELSE 0 END AS vowel, CASE WHEN LEFT(UPPER(name),1) NOT IN ('A','E','I','O','U') THEN 1 ELSE 0 END AS non_vowel\n",
         "FROM accounts)query;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h_XpddZTEfQd"
+      },
+      "source": [
+        "SELECT LEFT(primary_poc, STRPOS(primary_poc, ' ') -1 ) first_name, \n",
+        "RIGHT(primary_poc, LENGTH(primary_poc) - STRPOS(primary_poc, ' ')) last_name\n",
+        "FROM accounts;"
       ],
       "execution_count": null,
       "outputs": []
