SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ9Bz+mekjeTU7NlB+lz4X",
+      "authorship_tag": "ABX9TyNBPZRgzdJD7KFY/24C5nsS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +89,32 @@
         "SELECT LEFT(primary_poc, STRPOS(primary_poc, ' ') -1 ) first_name, \n",
         "RIGHT(primary_poc, LENGTH(primary_poc) - STRPOS(primary_poc, ' ')) last_name\n",
         "FROM accounts;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GmTjbUtTPzcO"
+      },
+      "source": [
+        "SELECT name, LEFT(name, POSITION(' ' IN name)-1) AS first_name, RIGHT(name, LENGTH(name)- POSITION(' ' IN name)) AS last_name\n",
+        "FROM sales_reps;     "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R-IT5X2NQC38"
+      },
+      "source": [
+        "SELECT primary_poc, CONCAT(first_name,'.',last_name,'@',name,'.com') AS email_address\n",
+        "FROM\n",
+        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
+        "  FROM accounts)query;  "
       ],
       "execution_count": null,
       "outputs": []
