--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNBPZRgzdJD7KFY/24C5nsS",
+      "authorship_tag": "ABX9TyPKMNaqIdK9VVDSANuE33Iy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,6 +115,34 @@
         "FROM\n",
         "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
         "  FROM accounts)query;  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zz97BZ1FmuUj"
+      },
+      "source": [
+        "SELECT primary_poc, CONCAT(first_name,'.',last_name,'@',REPLACE(name,' ',''),'.com') AS email_address\n",
+        "FROM\n",
+        "  (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
+        "  FROM accounts)query;  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YdeteTHIm4rP"
+      },
+      "source": [
+        "WITH t1 as (SELECT primary_poc, name, LEFT(primary_poc, STRPOS(primary_poc,' ')-1) AS first_name, RIGHT(primary_poc, LENGTH(primary_poc)-STRPOS(primary_poc,' ')) AS last_name\n",
+        "  FROM accounts)\n",
+        "                                                   SELECT first_name, last_name, CONCAT(first_name, '.', last_name, '@', name, '.com'), LEFT(LOWER(first_name), 1) || RIGHT(LOWER(first_name), 1) || LEFT(LOWER(last_name), 1) || RIGHT(LOWER(last_name), 1) || LENGTH(first_name) || LENGTH(last_name) || REPLACE(UPPER(name), ' ', '') AS password\n",
+        "FROM t1;                                                      "
       ],
       "execution_count": null,
       "outputs": []
