SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKMNaqIdK9VVDSANuE33Iy",
+      "authorship_tag": "ABX9TyMod1C5iaXFee5aQS4TBm2b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,6 +143,19 @@
         "  FROM accounts)\n",
         "                                                   SELECT first_name, last_name, CONCAT(first_name, '.', last_name, '@', name, '.com'), LEFT(LOWER(first_name), 1) || RIGHT(LOWER(first_name), 1) || LEFT(LOWER(last_name), 1) || RIGHT(LOWER(last_name), 1) || LENGTH(first_name) || LENGTH(last_name) || REPLACE(UPPER(name), ' ', '') AS password\n",
         "FROM t1;                                                      "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2wgJ5sRB6r61"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM sf_crime_data\n",
+        "LIMIT 10;"
       ],
       "execution_count": null,
       "outputs": []
