SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMod1C5iaXFee5aQS4TBm2b",
+      "authorship_tag": "ABX9TyOO7uO71HydBF1ROX7JPAtm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,6 +156,18 @@
         "SELECT *\n",
         "FROM sf_crime_data\n",
         "LIMIT 10;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4DEr4Djy69k5"
+      },
+      "source": [
+        "SELECT date AS original_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2)) AS formatted_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2))::DATE AS cleaned_date           \n",
+        "FROM sf_crime_data;                               "
       ],
       "execution_count": null,
       "outputs": []
