SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOO7uO71HydBF1ROX7JPAtm",
+      "authorship_tag": "ABX9TyNPp+mh3aAWgclzMn4yiT3+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,6 +168,21 @@
       "source": [
         "SELECT date AS original_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2)) AS formatted_date, (SUBSTR(date,7,4)||'-'||LEFT(date,2)||'-'||SUBSTR(date, 4,2))::DATE AS cleaned_date           \n",
         "FROM sf_crime_data;                               "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ivGFZixte2K-"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM accounts a\n",
+        "LEFT JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "WHERE o.total IS NULL;"
       ],
       "execution_count": null,
       "outputs": []
