SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPp+mh3aAWgclzMn4yiT3+",
+      "authorship_tag": "ABX9TyPTalG9o3hxyO+a739aPPY5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +179,21 @@
       },
       "source": [
         "SELECT *\n",
+        "FROM accounts a\n",
+        "LEFT JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "WHERE o.total IS NULL;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nxOCFOQifJrZ"
+      },
+      "source": [
+        "SELECT COALESCE(a.id, a.id)AS filled_id, a.name, a.website, a.lat, a.long, a.primary_poc, a.sales_rep_id, o.*\n",
         "FROM accounts a\n",
         "LEFT JOIN orders o\n",
         "ON a.id = o.account_id\n",
