--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPTalG9o3hxyO+a739aPPY5",
+      "authorship_tag": "ABX9TyNb/8i0ZA1S1jvSkofiS21P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,6 +198,21 @@
         "LEFT JOIN orders o\n",
         "ON a.id = o.account_id\n",
         "WHERE o.total IS NULL;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LBLUErXhflKH"
+      },
+      "source": [
+        "SELECT COALESCE(a.id, a.id)AS filled_id, a.name, a.website, a.lat, a.long, a.primary_poc, a.sales_rep_id, COALESCE(o.account_id=a.id) AS filled_order_id, o.occurred_at, o.standard_qty, o.gloss_qty, o.poster_qty, o.total, o.standard_amt_usd, o.gloss_amt_usd, o.poster_amt_usd, o.total_amt_usd\n",
+        "FROM accounts a\n",
+        "LEFT JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "WHERE o.total IS NULL;\n"
       ],
       "execution_count": null,
       "outputs": []
