SQL Data Cleaning

--- a/Quiz5_SQL.ipynb
+++ b/Quiz5_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz5_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLLvtNbr+j0HZu/iHqHCIV",
+      "authorship_tag": "ABX9TyMWzbtUAxqgDU56jismevV3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,6 +242,20 @@
         "FROM accounts a\n",
         "LEFT JOIN orders o\n",
         "ON a.id = o.account_id;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8JAPiSRV5YHg"
+      },
+      "source": [
+        "SELECT COALESCE(a.id, a.id)AS filled_id, a.name, a.website, a.lat, a.long, a.primary_poc, a.sales_rep_id, COALESCE(o.account_id=a.id) AS filled_order_id, o.occurred_at, COALESCE(o.standard_qty,0) standard_qty, COALESCE(o.gloss_qty,0) gloss_qty, COALESCE(o.poster_qty,0) poster_qty, o.total, COALESCE(o.standard_amt_usd,0) standard, COALESCE(o.gloss_amt_usd,0)gloss, COALESCE(o.poster_amt_usd,0)poster, COALESCE(o.total_amt_usd,0) total_amt\n",
+        "FROM accounts a\n",
+        "LEFT JOIN orders o\n",
+        "ON a.id = o.account_id;\n"
       ],
       "execution_count": null,
       "outputs": []
