--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpR12vHZejNhBpvHvEvVZA",
+      "authorship_tag": "ABX9TyNzD04FPkrgEAI9cGyu8hFn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,18 @@
       },
       "source": [
         "SELECT standard_amt_usd, SUM(standard_amt_usd) OVER (ORDER BY occurred_at) as running_total\n",
+        "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zK6t3aHm6Hyy"
+      },
+      "source": [
+        "SELECT standard_amt_usd, DATE_TRUNC('year',occurred_at) as year, SUM(standard_amt_usd) OVER (PARTITION BY DATE_TRUNC('year',occurred_at) ORDER BY occurred_at) as running_total\n",
         "FROM orders;"
       ],
       "execution_count": null,
