SQL Window Functions

--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzD04FPkrgEAI9cGyu8hFn",
+      "authorship_tag": "ABX9TyPmBAq+y6FxuxxIZb5G7P+u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,18 @@
       },
       "source": [
         "SELECT standard_amt_usd, DATE_TRUNC('year',occurred_at) as year, SUM(standard_amt_usd) OVER (PARTITION BY DATE_TRUNC('year',occurred_at) ORDER BY occurred_at) as running_total\n",
+        "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CBqrEyfd6nQK"
+      },
+      "source": [
+        "SELECT id, account_id, total, RANK() OVER (PARTITION BY account_id ORDER BY total) as total_rank\n",
         "FROM orders;"
       ],
       "execution_count": null,
