SQL Window Functions

--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmBAq+y6FxuxxIZb5G7P+u",
+      "authorship_tag": "ABX9TyOLF+wiGDaJJY1DWurJcrVM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,27 @@
       "source": [
         "SELECT id, account_id, total, RANK() OVER (PARTITION BY account_id ORDER BY total) as total_rank\n",
         "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "az20atcj5Caa"
+      },
+      "source": [
+        "SELECT id,\n",
+        "       account_id,\n",
+        "       standard_qty,\n",
+        "       DATE_TRUNC('month', occurred_at) AS month,\n",
+        "       DENSE_RANK() OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS dense_rank,\n",
+        "       SUM(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS sum_std_qty,\n",
+        "       COUNT(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS count_std_qty,\n",
+        "       AVG(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS avg_std_qty,\n",
+        "       MIN(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS min_std_qty,\n",
+        "       MAX(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS max_std_qty\n",
+        "FROM orders"
       ],
       "execution_count": null,
       "outputs": []
