SQL Window Functions

--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOLF+wiGDaJJY1DWurJcrVM",
+      "authorship_tag": "ABX9TyNluY7/XynzT5YKoRzBMcm3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,6 +77,28 @@
         "       MIN(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS min_std_qty,\n",
         "       MAX(standard_qty) OVER (PARTITION BY account_id ORDER BY DATE_TRUNC('month',occurred_at)) AS max_std_qty\n",
         "FROM orders"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ssPM_FMh5Oux"
+      },
+      "source": [
+        "SELECT id,\n",
+        "       account_id,\n",
+        "       DATE_TRUNC('year',occurred_at) AS year,\n",
+        "       DENSE_RANK() OVER account_year_window AS dense_rank,\n",
+        "       total_amt_usd,\n",
+        "       SUM(total_amt_usd) OVER account_year_window AS sum_total_amt_usd,\n",
+        "       COUNT(total_amt_usd) OVER account_year_window AS count_total_amt_usd,\n",
+        "       AVG(total_amt_usd) OVER account_year_window AS avg_total_amt_usd,\n",
+        "       MIN(total_amt_usd) OVER account_year_window AS min_total_amt_usd,\n",
+        "       MAX(total_amt_usd) OVER account_year_window AS max_total_amt_usd\n",
+        "FROM orders\n",
+        "WINDOW account_year_window AS  (PARTITION BY account_id ORDER BY DATE_TRUNC('year',occurred_at))                                                                           "
       ],
       "execution_count": null,
       "outputs": []
