--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNluY7/XynzT5YKoRzBMcm3",
+      "authorship_tag": "ABX9TyNgwnkg9D4f3kZIdnbhM6tF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,25 @@
         "       MAX(total_amt_usd) OVER account_year_window AS max_total_amt_usd\n",
         "FROM orders\n",
         "WINDOW account_year_window AS  (PARTITION BY account_id ORDER BY DATE_TRUNC('year',occurred_at))                                                                           "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4b5q7fS-Zm4z"
+      },
+      "source": [
+        "SELECT occurred_at, total_amt_usd,\n",
+        "       LEAD(total_amt_usd) OVER (ORDER BY total_amt_usd) AS lead,\n",
+        "       LEAD(total_amt_usd) OVER (ORDER BY total_amt_usd) - total_amt_usd AS lead_difference\n",
+        "FROM (\n",
+        "SELECT occurred_at,\n",
+        "       SUM(total_amt_usd) AS total_amt_usd\n",
+        "  FROM orders \n",
+        " GROUP BY 1\n",
+        " ) sub"
       ],
       "execution_count": null,
       "outputs": []
