SQL Window Functions

--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgwnkg9D4f3kZIdnbhM6tF",
+      "authorship_tag": "ABX9TyNNhNxyg8RhoxbaYLUop3GL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,19 @@
         "  FROM orders \n",
         " GROUP BY 1\n",
         " ) sub"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ZD4fxdxZ9ap"
+      },
+      "source": [
+        "SELECT account_id, occurred_at, standard_qty, NTILE(4)OVER(PARTITION BY account_id ORDER BY standard_qty) as quartile\n",
+        "FROM orders \n",
+        "ORDER BY account_id DESC;"
       ],
       "execution_count": null,
       "outputs": []
