SQL Window Functions

--- a/Quiz6_SQL.ipynb
+++ b/Quiz6_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz6_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNhNxyg8RhoxbaYLUop3GL",
+      "authorship_tag": "ABX9TyNo1fRvwjXJ3uXd9MoaASs2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,6 +129,32 @@
       },
       "source": [
         "SELECT account_id, occurred_at, standard_qty, NTILE(4)OVER(PARTITION BY account_id ORDER BY standard_qty) as quartile\n",
+        "FROM orders \n",
+        "ORDER BY account_id DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-vsQdpkAiZ4I"
+      },
+      "source": [
+        "SELECT account_id, occurred_at, gloss_qty, NTILE(2)OVER(PARTITION BY account_id ORDER BY gloss_qty) as gloss_half\n",
+        "FROM orders \n",
+        "ORDER BY account_id DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e4MQ69gLil_Y"
+      },
+      "source": [
+        "SELECT account_id, occurred_at, total_amt_usd, NTILE(100)OVER(PARTITION BY account_id ORDER BY total_amt_usd) as total_percentile\n",
         "FROM orders \n",
         "ORDER BY account_id DESC;"
       ],
