SQL Advanced Joins and Performance Tuning

--- a/Quiz7_SQL.ipynb
+++ b/Quiz7_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz7_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ+8KqWbKjQfYR+33BVA2L",
+      "authorship_tag": "ABX9TyOsNbd++5ypOkapR1Z5gTGN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,20 @@
         "FROM accounts\n",
         "FULL OUTER JOIN sales_reps\n",
         "ON accounts.sales_rep_id = sales_reps.id"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9bhfa3wj37ej"
+      },
+      "source": [
+        "SELECT a.name as account, a.primary_poc, s.name as sales_rep\n",
+        "FROM accounts a\n",
+        "LEFT JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id AND a.primary_poc < s.name\n"
       ],
       "execution_count": null,
       "outputs": []
